[gd_scene load_steps=2 format=3 uid="uid://cuqax5enrm6jo"]

[ext_resource type="Script" path="res://Scripts/terminal_scene.gd" id="1_kc4pd"]

[node name="TerminalScene" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_kc4pd")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 640.0
metadata/_edit_use_anchors_ = true

[node name="Map" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 640.0
offset_bottom = 448.0
color = Color(0.0745098, 0.0745098, 0.0745098, 1)
metadata/_edit_use_anchors_ = true

[node name="VirtualTestLevelButton" type="Button" parent="Control/Map"]
layout_mode = 0
offset_left = 394.0
offset_top = 308.0
offset_right = 479.0
offset_bottom = 378.0
focus_neighbor_top = NodePath("../VirtualLevel1")
focus_neighbor_bottom = NodePath("../../ReturnButton")
text = "Virtual 
Test Level"

[node name="VirtualLevel1" type="Button" parent="Control/Map"]
layout_mode = 0
offset_left = 330.0
offset_top = 222.0
offset_right = 404.0
offset_bottom = 286.0
focus_neighbor_top = NodePath("../VirtualLevel3")
focus_neighbor_bottom = NodePath("../VirtualTestLevelButton")
text = "Level 1"

[node name="VirtualLevel3" type="Button" parent="Control/Map"]
layout_mode = 0
offset_left = 418.0
offset_top = 146.0
offset_right = 492.0
offset_bottom = 210.0
focus_neighbor_top = NodePath("../VirtualLevel4")
focus_neighbor_bottom = NodePath("../VirtualLevel1")
text = "Level 3"

[node name="VirtualLevel4" type="Button" parent="Control/Map"]
layout_mode = 0
offset_left = 338.0
offset_top = 102.0
offset_right = 412.0
offset_bottom = 166.0
focus_neighbor_top = NodePath("../VirtualLevel5")
focus_neighbor_bottom = NodePath("../VirtualLevel3")
text = "Level 4"

[node name="VirtualLevel5" type="Button" parent="Control/Map"]
layout_mode = 0
offset_left = 292.0
offset_top = 22.0
offset_right = 366.0
offset_bottom = 86.0
focus_neighbor_bottom = NodePath("../VirtualLevel4")
text = "Level 5"

[node name="Loadout" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 672.0
offset_top = 32.0
offset_right = 1120.0
offset_bottom = 608.0
color = Color(0.156863, 0.0588235, 0.054902, 1)
metadata/_edit_use_anchors_ = true

[node name="Info" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 192.0
offset_top = 480.0
offset_right = 640.0
offset_bottom = 608.0
color = Color(0.101961, 0.0588235, 0.00784314, 1)
metadata/_edit_use_anchors_ = true

[node name="ReturnButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 512.0
offset_right = 128.0
offset_bottom = 608.0
focus_neighbor_top = NodePath("../Map/VirtualTestLevelButton")
text = "return"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Control/Map/VirtualTestLevelButton" to="." method="_on_virtual_test_level_button_pressed"]
[connection signal="pressed" from="Control/Map/VirtualLevel1" to="." method="_on_level_pressed" binds= [1]]
[connection signal="pressed" from="Control/Map/VirtualLevel3" to="." method="_on_level_pressed" binds= [3]]
[connection signal="pressed" from="Control/Map/VirtualLevel4" to="." method="_on_level_pressed" binds= [4]]
[connection signal="pressed" from="Control/Map/VirtualLevel5" to="." method="_on_level_pressed" binds= [5]]
[connection signal="pressed" from="Control/ReturnButton" to="." method="_on_return_button_pressed"]
